fix: Padronizar caminhos de volumes para /data em todos os serviços
CORREÇÕES CRÍTICAS:
- docker-compose.yml: Alterar volumes de /files para /data (n8n e Streamlit)
- app.py: OUTPUT_DIR alterado de /files/output para /data/output
- Adicionar mapeamento de ../python_scripts:/data/python_scripts no n8n

ADIÇÕES:
- SETUP_CHECKLIST.md: Guia completo de pré-execução com checklist
- diagnose.sh: Script para diagnosticar problemas comuns
- template_etp.txt: Arquivo de exemplo para criação de templates
- Atualizar README.md com informações sobre padronização de paths

RESOLUÇÃO:
Conflito de pastas (/data vs /files) que causaria falha na automação foi
corrigido. Todos os serviços agora usam /data como raiz compartilhada.

Antes de rodar: Consulte SETUP_CHECKLIST.md

--- a/engenharia-portal/docker-compose.yml
+++ b/engenharia-portal/docker-compose.yml
@@ -38,8 +38,11 @@ services:
       # Persistência de dados do n8n
       - ./n8n_data:/home/node/.n8n
       
-      # Pasta compartilhada com Streamlit
-      - ./shared_files:/files
+      # Pasta compartilhada com Streamlit (padronizado para /data)
+      - ./shared_files:/data
+      
+      # Scripts Python para execução de automações
+      - ../python_scripts:/data/python_scripts:ro
     
     networks:
       - engenharia_network
@@ -67,11 +70,8 @@ services:
       - N8N_WEBHOOK_URL=http://n8n:5678/webhook/gerar-etp
     
     volumes:
-      # Pasta compartilhada com n8n
-      - ./shared_files:/files
-      
-      # Hot reload durante desenvolvimento (opcional)
-      - ./frontend/app.py:/app/app.py
+      # Pasta compartilhada com n8n (padronizado para /data)
+      - ./shared_files:/data
     
     networks:
       - engenharia_network
