--- a/python_scripts/requirements.txt
+++ b/python_scripts/requirements.txt
@@ -11,6 +11,7 @@ openpyxl>=3.1.0
 python-docx>=1.1.0
 python-pptx>=0.6.23
 PyPDF2>=3.0.0
+pdfplumber>=0.10.0
 reportlab>=4.0.0
 
 # ======================================
